translate "Freeing resources"
git-svn-id: https://svn.php.net/repository/phpdoc/kr/trunk@201174 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types.xml
+++ b/language/types.xml
@@ -2037,7 +2037,7 @@ echo $obj->scalar;  // outputs 'ciao'
    </sect2>
 
     <sect2 id="language.types.resource.self-destruct">
-     <title>Freeing resources</title>
+     <title>resource 해제하기</title>
     
     <para>
      PHP 4의 젠드 엔진에서 참조-카운팅(reference-counting) 시스템이 추가되어,
